--- a/config.env
+++ b/config.env
@@ -1,1 +1,4 @@
 PORT=3003
+DBPASSWORD=blackot23B
+DBURI=mongodb+srv://chat_app:<PASSWORD>@cluster0.296pary.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=ARMANIA23B
