--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "google-auth-library": "^9.4.1",
+    "googleapis": "^129.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
